Bangun UI monitoring Run
